--- a/Leya.html
+++ b/Leya.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Сторінка Леї</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-grid.css">
   <link rel="icon" href="images/icon.png">
 </head>
 <body>
@@ -17,7 +17,9 @@
     <div class="left">
         <h3>Меню:</h3>
         <ul>
-            <li><a href="index.html" title="Відкриває головну сторінку">Головна</a></li>
+            <li><a href="index.html" title="Відкриває головну сторінку">Головна grid</a></li>
+            <li><a href="index-nogrid-noflex.html" title="Відкриває головну сторінку">Головна без grid, flex</a></li>
+            <li><a href="index-flex.html" title="Відкриває головну сторінку">Головна flex</a></li>
             <li><a href="Luke.html" title="Відкриває сторінку Люка">Люк Скайвокер</a></li>
             <li><a href="Leya.html" title="Відкриває сторінку Леї">Лея Орґана</a></li>
             <li><a href="Solo.html" title="Відкриває сторінку Хана">Хан Соло</a></li>
