--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>SW сайт</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-grid.css">
   <link rel="icon" href="images/icon.png">
 </head>
 <body>
   <header>
-  <div class="header-left">
-    <h1>SW</h1>
-  </div>
+    <div class="header-left">
+      <h1>SW</h1>
+    </div>
     <a href="index.html" title="На головну сторінку">Головна</a>
   </header>
 
   <div class="left">
     <h3>Меню:</h3>
     <ul>
-      <li><a href="index.html" title="Відкриває головну сторінку">Головна</a></li>
+      <li><a href="index.html" title="Відкриває головну сторінку">Головна grid</a></li>
+      <li><a href="index-nogrid-noflex.html" title="Відкриває головну сторінку">Головна без grid, flex</a></li>
+      <li><a href="index-flex.html" title="Відкриває головну сторінку">Головна flex</a></li>
       <li><a href="Luke.html" title="Відкриває сторінку Люка">Люк Скайвокер</a></li>
       <li><a href="Leya.html" title="Відкриває сторінку Леї">Лея Орґана</a></li>
       <li><a href="Solo.html" title="Відкриває сторінку Хана">Хан Соло</a></li>
