--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>SW сайт</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style-grid.css">
-  <link rel="icon" href="images/icon.png">
+  <link rel="icon" href="https://krapivnyiboris.github.io/WebLr1Variant13/images/icon.png"> 
 </head>
 <body>
   <header>
     <div class="header-left">
       <h1>SW</h1>
     </div>
-    <a href="index.html" title="На головну сторінку">Головна</a>
+    <a href="https://krapivnyiboris.github.io/WebLr1Variant13/index.html" title="На головну сторінку">Головна</a>
   </header>
 
   <div class="left">
     <h3>Меню:</h3>
     <ul>
-      <li><a href="index.html" title="Відкриває головну сторінку">Головна grid</a></li>
-      <li><a href="index-nogrid-noflex.html" title="Відкриває головну сторінку">Головна без grid, flex</a></li>
-      <li><a href="index-flex.html" title="Відкриває головну сторінку">Головна flex</a></li>
-      <li><a href="Luke.html" title="Відкриває сторінку Люка">Люк Скайвокер</a></li>
-      <li><a href="Leya.html" title="Відкриває сторінку Леї">Лея Орґана</a></li>
-      <li><a href="Solo.html" title="Відкриває сторінку Хана">Хан Соло</a></li>
-      <li><a href="Chubaka.html" title="Відкриває сторінку Чубаки">Чубака</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/index.html" title="Відкриває головну сторінку">Головна grid</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/index-nogrid-noflex.html" title="Відкриває головну сторінку">Головна без grid, flex</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/index-flex.html" title="Відкриває головну сторінку">Головна flex</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/table-email.html" title="Відкриває поштову сторінку">Поштова сторінка</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/Luke.html" title="Відкриває сторінку Люка">Люк Скайвокер</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/Leya.html" title="Відкриває сторінку Леї">Лея Орґана</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/Solo.html" title="Відкриває сторінку Хана">Хан Соло</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/Chubaka.html" title="Відкриває сторінку Чубаки">Чубака</a></li>
     </ul>
   </div>
 
@@ -50,13 +52,13 @@
     <h2>Інтерактивне зображення героїв</h2>
     <p>Натисніть на героїв на зображенні, щоб перейти на присвячені їм сторінки:</p>
 
-    <img src="images/maincharacters.png" usemap="#charactersmap" alt="Зображення героїв">
+    <img src="https://krapivnyiboris.github.io/WebLr1Variant13/images/maincharacters.png" usemap="#charactersmap" alt="Зображення героїв">
 
     <map name="charactersmap">
-      <area shape="rect" coords="0,50,126,400" href="Luke.html" alt="Люк Скайвокер">
-      <area shape="rect" coords="140,110,290,400" href="Leya.html" alt="Лея Органа">
-      <area shape="rect" coords="292,10,405,160" href="Chubaka.html" alt="Чубака">
-      <area shape="rect" coords="390,1,560,400" href="Solo.html" alt="Хан Соло">
+      <area shape="rect" coords="0,50,126,400" href="https://krapivnyiboris.github.io/WebLr1Variant13/Luke.html" alt="Люк Скайвокер">
+      <area shape="rect" coords="140,110,290,400" href="https://krapivnyiboris.github.io/WebLr1Variant13/Leya.html" alt="Лея Органа">
+      <area shape="rect" coords="292,10,405,160" href="https://krapivnyiboris.github.io/WebLr1Variant13/Chubaka.html" alt="Чубака">
+      <area shape="rect" coords="390,1,560,400" href="https://krapivnyiboris.github.io/WebLr1Variant13/Solo.html" alt="Хан Соло">
     </map>
   </div>
 
