--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <h3>Меню:</h3>
     <ul>
       <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/index.html" title="Відкриває головну сторінку">Головна grid</a></li>
+      <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/js.html" title="Відкриває сторінку з js">Головна js</a></li>
       <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/index-nogrid-noflex.html" title="Відкриває головну сторінку">Головна без grid, flex</a></li>
       <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/index-flex.html" title="Відкриває головну сторінку">Головна flex</a></li>
       <li><a href="https://krapivnyiboris.github.io/WebLr1Variant13/table-email.html" title="Відкриває поштову сторінку">Поштова сторінка</a></li>
