--- a/js.html
+++ b/js.html
@@ -73,10 +73,25 @@
 
   <div class="right" id="block-right">
     <h3>Про сайт</h3>
+    <div style="margin-bottom: 10px; color: #ffe81f;">
+        <input type="checkbox" id="capitalize_checkbox"> 
+        <label for="capitalize_checkbox">Робити заголовні літери</label>
+    </div>
     <p id="block-4-content">Ласкаво просимо у всесвіт Star Wars! Тут ви знайдете інформацію про персонажів, планети, кораблі та хронологію фільмів.</p>
 
     <h3>Короткі факти</h3>
+    <ul>
+      <li>Сага охоплює більше ніж 40 років історії фільмів.</li>
+      <li>Персонажі, планети та зорельоти описані у всіх трьох трилогіях.</li>
+      <li>Цей сайт створений для фанатів, щоб дізнатися більше про галактику Зоряних Війн.</li>
+    </ul>
+
     <h3>Цікаві факти</h3>
+    <ul>
+      <li>Йода з’являється в усіх трьох оригінальних трилогіях.</li>
+      <li>Дарт Вейдер спочатку мав бути зеленим.</li>
+      <li>“Татуїн” названо на честь справжньої планети у Сахарі.</li>
+    </ul>
     </div>
 
 
